@@ -58,3 +58,4 @@ gv/gv-*
 *~
 *.err
 junk*
+nightly*log
